[edit] fixing about horizontal scroll

--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -75,6 +75,7 @@
     flex-direction: row;
     justify-content: flex-start;
     overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
 
     .polaroid {
       position: relative;
